--- a/6.NLP/natural_language_processing.ipynb
+++ b/6.NLP/natural_language_processing.ipynb
@@ -93,22 +93,40 @@
         }
       },
       "source": [
-        "import re\n",
-        "import nltk\n",
-        "nltk.download('stopwords')\n",
-        "from nltk.corpus import stopwords\n",
-        "from nltk.stem.porter import PorterStemmer\n",
-        "corpus = []\n",
+        "# Import necessary libraries for text processing\n",
+        "import re  # Regular expressions for text cleaning\n",
+        "import nltk  # Natural Language Toolkit for text preprocessing\n",
+        "\n",
+        "nltk.download('stopwords')  # Download the list of common stopwords (words like \"the\", \"is\", \"in\", etc.)\n",
+        "from nltk.corpus import stopwords  # Import stopwords for filtering unnecessary words\n",
+        "from nltk.stem.porter import PorterStemmer  # Import Porter Stemmer for reducing words to their root forms\n",
+        "\n",
+        "corpus = []  # Initialize an empty list to store cleaned reviews\n",
+        "\n",
+        "# Loop through all 1000 reviews in the dataset\n",
         "for i in range(0, 1000):\n",
-        "  review = re.sub('[^a-zA-Z]', ' ', dataset['Review'][i])\n",
-        "  review = review.lower()\n",
-        "  review = review.split()\n",
-        "  ps = PorterStemmer()\n",
-        "  all_stopwords = stopwords.words('english')\n",
-        "  all_stopwords.remove('not')\n",
-        "  review = [ps.stem(word) for word in review if not word in set(all_stopwords)]\n",
-        "  review = ' '.join(review)\n",
-        "  corpus.append(review)"
+        "    # Remove all non-alphabet characters (punctuation, numbers) and replace them with spaces\n",
+        "    review = re.sub('[^a-zA-Z]', ' ', dataset['Review'][i])\n",
+        "\n",
+        "    # Convert text to lowercase to maintain consistency\n",
+        "    review = review.lower()\n",
+        "\n",
+        "    # Split the review into individual words (tokenization)\n",
+        "    review = review.split()\n",
+        "\n",
+        "    ps = PorterStemmer()  # Create a Porter Stemmer object for stemming words (reducing them to their root form)\n",
+        "\n",
+        "    all_stopwords = stopwords.words('english')  # Load default English stopwords\n",
+        "    all_stopwords.remove('not')  # Keep \"not\" because negation is important for sentiment analysis  (e.g., \"not good\" is negative)\n",
+        "\n",
+        "    # Apply stemming and remove stopwords, keeping only meaningful words (Stem it to its base form)\n",
+        "    review = [ps.stem(word) for word in review if word not in set(all_stopwords)]\n",
+        "\n",
+        "    # Convert the processed list of words back into a sentence\n",
+        "    review = ' '.join(review)\n",
+        "\n",
+        "    # Store the cleaned review in the corpus\n",
+        "    corpus.append(review)"
       ],
       "execution_count": null,
       "outputs": [
@@ -121,6 +139,23 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original Review:\n",
+        "\n",
+        "\"This product is not good at all! I hated it.\"\n",
+        "\n",
+        "After Processing:\n",
+        "\n",
+        "'product not good hate'\n",
+        "\n",
+        "Now the ML model can clearly learn that “not good” and “hate” are negative indicator"
+      ],
+      "metadata": {
+        "id": "KN92OTFSWc1F"
+      }
     },
     {
       "cell_type": "code",
@@ -156,6 +191,52 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**After cleaning** the text reviews (saved in corpus), we now want to convert those reviews into numbers so that machine learning models can understand and learn from them. This step is called Feature Extraction."
+      ],
+      "metadata": {
+        "id": "4O9dLg3OWt18"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This imports **CountVectorizer,** a tool that converts text into a bag of words (i.e., word counts).\n",
+        "\n",
+        "It creates a **matrix** where each row is a review, and each column is a word."
+      ],
+      "metadata": {
+        "id": "3HRRNRyyW9Cs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We create a CountVectorizer object.\n",
+        "\n",
+        "**max_features = 1500** means: only keep the top 1500 most frequent words across all reviews.\n",
+        "\n",
+        "This helps reduce memory and focus on the most important words."
+      ],
+      "metadata": {
+        "id": "Vq1L80GHXJkr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "✅ Example **after cv.fit_transform**\n",
+        "\n",
+        "Review: \"love product\" → [1, 0, 1]\n",
+        "\n",
+        "Review: \"hate product\" → [0, 1, 1]"
+      ],
+      "metadata": {
+        "id": "vxAt2iEuXXZc"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qroF7XcSCvY3"
@@ -168,6 +249,21 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**step 1:** Text Cleaning → corpus\n",
+        "\n",
+        "**step 2:** Convert Text to Numbers (Bag of Words) → X\n",
+        "\n",
+        "**step 3:** Get Labels → y\n",
+        "\n",
+        "**step 4:** You now have inputs (X) and outputs (y) ready for training a machine learning model (like Logistic Regression, Naive Bayes, etc.)"
+      ],
+      "metadata": {
+        "id": "XnlrvhwRX-gT"
+      }
     },
     {
       "cell_type": "markdown",
