--- a/8.Dimensionality Reduction/PCA/principal_component_analysis.ipynb
+++ b/8.Dimensionality Reduction/PCA/principal_component_analysis.ipynb
@@ -130,6 +130,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**pca = PCA(n_components = 2)** to minimize the quantity of features till 2"
+      ],
+      "metadata": {
+        "id": "HuXY_XADphYc"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TAi_sSw9AVzI"
@@ -151,6 +160,15 @@
       "source": [
         "## Training the Logistic Regression model on the Training set"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "First we work on dataset through PCA to reduce dimension, Many datasets have a large number of correlated features. PCA transforms these into fewer principal components while retaining most of the information.Now we are applying model to predict target value"
+      ],
+      "metadata": {
+        "id": "ai9wxBYoqE7T"
+      }
     },
     {
       "cell_type": "code",
