--- a/9.Evaluating Model - Model Selection/Grid-Search/grid_search.ipynb
+++ b/9.Evaluating Model - Model Selection/Grid-Search/grid_search.ipynb
@@ -249,6 +249,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**estimator:** the SVM model you're optimizing\n",
+        "\n",
+        "**param_grid**: combinations of parameters to try\n",
+        "\n",
+        "**scoring='accuracy'**: measure performance using accuracy\n",
+        "\n",
+        "**cv=10:** 10-fold cross-validation\n",
+        "\n",
+        "**n_jobs=-1:** use all CPU cores for faster search"
+      ],
+      "metadata": {
+        "id": "MYmT0yl7W9Fc"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "KU4I-ALV0kj0",
